# historical-food-prices-colombia

./: README.md  main.py  pyproject.toml
notebooks/: analyze_parquet.ipynb  extract-pdf-dataV1.ipynb  extract-pdf-dataV2.ipynb
src/downloader/: download_pdfs.sh
src/extractor/: extract.py
src/flows/: pipeline.py
src/transformer/: transform.py
