[project]
name = "historical-food-prices-colombia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "prefect>=3.6.4",
    "prefect-shell>=0.3.1",
    "pyarrow>=21.0.0",
]
